# ansible_module_rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: slurp_rs.rs  test_slurp.yml  test_slurp_big.yml
src/: ansible_module.rs  builder.rs  lib.rs  macros.rs
