[package]
name = "ansible_module"
description = "Framework to write Ansible modules with Rust"
license-file = "LICENSE"
readme = "README.md"
keywords = ["ansible", "ansible_module"]
repository = "https://github.com/bakanovskii/ansible_module_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
base64 = "0.22.1"
